Used css to create the UI for the rock paper scissors game

--- a/index.html
+++ b/index.html
@@ -5,9 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors</title>
-
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <main class="container">
+        <h1 class="heading">Rock Paper Scissors</h1>
+        <h3>Select your option</h3>
+        <section class="player">
+            <button class="rock">rock</button>
+            <button class="paper">paper</button>
+            <button class="scissors">scissors</button>
+        </section>
+        <p class="selected">?</p>
+        <button class="play">Play Round</button>
+        <div class="results"></div>
+        
+    </main>
+
+    
     <script src="script.js"></script>
 </body>
 </html>
