Added functions that increment rounds until winner is declared

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <h1 class="heading">Rock Paper Scissors</h1>
         <h3>Select your option</h3>
         <section class="player">
-            <button class="rock">rock</button>
-            <button class="paper">paper</button>
-            <button class="scissors">scissors</button>
+            <button id="rock" class="btn">rock</button>
+            <button id="paper" class="btn">paper</button>
+            <button id="scissors" class="btn">scissors</button>
         </section>
         <p class="selected">?</p>
         <button class="play">Play Round</button>
