added a p tag and styled it to highlight the conclusion of the game

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <p class="selected">?</p>
         <button class="play">Play Round</button>
         <div class="results"></div>
+        <p class="winner"></p>
         
     </main>
 
